--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,11 @@
+[build-system]
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "geo"
 version = "0.1.0"
-description = "Default template for PDM package"
+description = "General utils for geographic data handling."
 authors = [
     {name = "TLouf", email = "loufthomas@gmail.com"},
 ]
@@ -13,10 +17,12 @@ requires-python = ">=3.10"
 readme = "README.md"
 license = {text = "MIT"}
 
-[build-system]
-requires = ["pdm-backend"]
-build-backend = "pdm.backend"
+[tool.pixi.workspace]
+channels = ["conda-forge"]
+platforms = ["linux-64"]
 
+[tool.pixi.pypi-dependencies]
+geo = { path = ".", editable = true }
 
-[tool.pdm]
-distribution = true
+[tool.pixi.environments]
+default = { solve-group = "default" }
